--- a/Cryptocurrency/src/Components/Crypto-List/CryptoList.module.css
+++ b/Cryptocurrency/src/Components/Crypto-List/CryptoList.module.css
@@ -2,7 +2,16 @@
   border: 1px solid black;
   text-align: center;
   padding: 20px;
+  cursor: grab;  
+  background-color: rgb(0, 0, 1 );
+  touch-action: none;
+  border-radius: 8px;
+  &:active{
+    cursor: grabbing;  
+  }
 }
+
+
 
 
 .cryptoCard>img{
