Added Searh Feature and updated CSS styles for button

--- a/Cryptocurrency/src/Components/CryptoData/CryptoData.module.css
+++ b/Cryptocurrency/src/Components/CryptoData/CryptoData.module.css
@@ -1,7 +1,7 @@
 .cryptoContainer{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  background-color: red;
+  background-color: rgb(253, 0, 2);
   gap: 10px;
   padding: 10px;
 
