--- a/Cryptocurrency/src/Components/Navbar/Navbar.module.css
+++ b/Cryptocurrency/src/Components/Navbar/Navbar.module.css
@@ -1,9 +1,13 @@
 .nav{
 text-align: center;
-}
+margin-bottom: 20px;}
+
 
 .nav>h1{
-  margin-top: 15px;
+  padding: 15px 0px;
   font-size: 40px;
   color:azure;
 }
+
+
+
