--- a/Cryptocurrency/src/App.css
+++ b/Cryptocurrency/src/App.css
@@ -4,5 +4,9 @@ div.container{
   max-width: 1280px;
   margin: auto;
   color: white;
-  background-color:  rgb(0, 0, 1 );;
+  background-color:  rgb(0, 0, 1 );
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
 }
