--- a/Cryptocurrency/src/Components/Crypto-List/CryptoList.module.css
+++ b/Cryptocurrency/src/Components/Crypto-List/CryptoList.module.css
@@ -4,7 +4,8 @@
   padding: 20px;
   cursor: grab;  
   background-color: rgb(0, 0, 1 );
-  touch-action: none;
+  touch-action: none;       
+  /* Added to align drag & drop functionality in Mobile Phone(Touch Screen) */
   border-radius: 8px;
   &:active{
     cursor: grabbing;  
