--- a/Cryptocurrency/src/Components/CryptoData/CryptoData.module.css
+++ b/Cryptocurrency/src/Components/CryptoData/CryptoData.module.css
@@ -2,7 +2,18 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   background-color: rgb(253, 0, 2);
-  gap: 10px;
+  gap: 1rem;
   padding: 10px;
 
+}
+@media (max-width: 780px) {
+  .cryptoContainer {
+    grid-template-columns: repeat(2, 1fr); 
+  }
+}
+
+@media (max-width: 480px) {
+  .cryptoContainer {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
