--- a/Cryptocurrency/src/App.css
+++ b/Cryptocurrency/src/App.css
@@ -1,12 +1,17 @@
-
-
-div.container{
+div.container {
   max-width: 1280px;
   margin: auto;
   color: white;
-  background-color:  rgb(0, 0, 1 );
+  background-color: rgb(0, 0, 1);
   display: flex;
   flex-direction: column;
   justify-content: center;
   /* align-items: center; */
+}
+
+.loading {
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 20px;
 }
